interface Observer {
    void update(Device device);
}
