interface DeviceIterator {
    boolean hasNext();
    ProxyDevice next();
}