class ActionConstants {
    public static final String MAKE_COFFEE = "makeCoffee";
    public static final String BOIL_WATER = "boilWater";
    public static final String HEAT_STOVE = "heatStove";
    public static final String HEAT_OVEN = "heatOven";
}